Finish API and add Dockerfile
